--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,17 +1,16 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "server/index.js",
-        "use": "@vercel/node"
+          "src": "index.js",
+          "use": "@vercel/node"
       }
-    ],
-    "routes": [
+  ],
+  "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/server/index.js"
+          "src": "/(.*)",
+          "dest": "index.js"
       }
-    ]
-  }
-  
+  ]
+}
   
