--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,7 +8,8 @@
   ],
   "routes": [
       {
-          "src": "/(.*)",
+          
+          "src": "/socket.io/(.*)"
           "dest": "index.js"
       }
   ]
