--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,10 +8,8 @@
   ],
   "routes": [
       {
-          
-          "src": "/(.*)"
+          "src": "/(.*)",
           "dest": "index.js"
       }
   ]
 }
-  
